--- a/yacut/templates/header.html
+++ b/yacut/templates/header.html
@@ -12,6 +12,11 @@
                 Главная
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('cut_files_link') }}">
+                Загрузка файлов
+              </a>
+            </li>
           </ul>
         </div>
 
