--- a/yacut/templates/main.html
+++ b/yacut/templates/main.html
@@ -12,21 +12,27 @@
           <div class="col-sm">
           </div>
           <div class="col-sm">
-            <form>
-              <div>
-                <div>
-                  <input type="text" class="form-control form-control-lg py-2 mb-3" id="form-title" name=""
-                    placeholder="Длинная ссылка">
-                  <p><span style="color:red">Текст возможной ошибки</span></p>
-                </div>
-                <div>
-                  <input type="url" class="form-control form-control-lg py-2 mb-3" id="form-link" name=""
-                    placeholder="Ваш вариант короткой ссылки">
-                  <p><span style="color:red">Текст возможной ошибки</span></p>
-                </div>
-
-                <input type="submit" class="btn btn-primary" value="Создать">
-              </div>
+            <form method="POST" novalidate>
+              {{ form.csrf_token }}
+              {{ form.original_link(class="form-control form-control-lg py-3 mb-3", id="form-title", placeholder=form.original_link.label.text) }}
+              <p>
+                {% if form.original_link.errors %}
+                  {% for error in form.original_link.errors %}
+                    <span style="color: red">{{ error }}</span>
+                  {% endfor %}
+                {% endif %}
+              </p>
+              <p>
+                {{ form.custom_id(class="form-control form-control-lg py-3 mb-3", id="form-link", placeholder=form.custom_id.label.text) }}
+              </p>
+              <p>
+                {% if form.custom_id.errors %}
+                  {% for error in form.custom_id.errors %}
+                    <span style="color: red">{{ error }}</span>
+                  {% endfor %}
+                {% endif %}
+              </p>
+              {{ form.submit(class="btn btn-primary") }}
             </form>
           </div>
           <div class="col-sm">
@@ -35,15 +41,24 @@
       </div>
 
       <div class="container">
-        <div class="row ">
+        <div class="row">
           <div class="col-sm">
           </div>
           <div class="col-sm">
-            <p class="text-center">
-            <h5 class="text-center">Пример информационного сообщения</h5>
-            </p>
+            {% if link %}
+              <h5 class="text-center">Ваша новая ссылка готова:</h5>
+              <p class="text-center">
+                <a href="{{ link }}" class="text-center" target="_blank">{{ link }}</a>
+              </p>
+            {% endif %}
           </div>
           <div class="col-sm">
+            {% with messages = get_flashed_messages() %}
+              {% for message in messages %}
+                <h5 class="text-center">Найденная ошибка</h5>
+                <p class="text-center">{{ message }}</p>
+              {% endfor %}
+            {% endwith %}
           </div>
         </div>
       </div>
