--- a/yacut/templates/header.html
+++ b/yacut/templates/header.html
@@ -13,7 +13,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('cut_files_link') }}">
+              <a class="nav-link" href="{{ url_for('files_link') }}">
                 Загрузка файлов
               </a>
             </li>
