--- a/yacut/templates/404.html
+++ b/yacut/templates/404.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %} 
+{% extends 'base.html' %} 
 {% block title %}404. Если тут что-то было, теперь этого тут нет.{% endblock %}
 {% block content %}
   <section class="container my-5">
