--- a/yacut/templates/500.html
+++ b/yacut/templates/500.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% block title %}500. Хьюстон, у нас проблемы!{% endblock %}
 {% block content %}
   <section class="container my-5">
