--- a/yacut/templates/index.html
+++ b/yacut/templates/index.html
@@ -1,36 +1,49 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="{{ url_for('static', filename='img/fav/favicon.ico') }}" type="image" />
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/fav/apple-touch-icon.png') }}" />
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/fav/favicon-32x32.png') }}" />
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='img/fav/favicon-16x16.png') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
-  <title>{% block title %}YaCut - укоротитель ссылок{% endblock title %}</title>
-</head>
-<body>
-  {% include "header.html" %}
+{% extends "base.html" %}
+{% block content %}
+  <main>
+    <section class="container my-5 px-4">
+      <h1 class="text-center"><span style="color:red">Ya</span>Cut</h1>
+      <p class="text-center my-4">
+        Создайте короткую ссылку автоматически или предложите свой вариант
+      </p>
 
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <div class="container mt-3">
-        <div class="row justify-content-center">
-          <div class="col-sm-6">
-            <div class="alert alert-danger">
-              {% for message in messages %}
-                <p class="mb-0">{{ message }}</p>
+      <div class="container">
+        <div class="row my-3">
+          <div class="col-sm"></div>
+          <div class="col-sm">
+            <form method="POST" novalidate>
+              {{ form.csrf_token }}
+              {{ form.original_link(class="form-control form-control-lg py-3 mb-3", id="form-title", placeholder=form.original_link.label.text) }}
+              {% for error in form.original_link.errors %}
+                <p><span style="color: red">{{ error }}</span></p>
               {% endfor %}
-            </div>
+
+              {{ form.custom_id(class="form-control form-control-lg py-3 mb-3", id="form-link", placeholder=form.custom_id.label.text) }}
+              {% for error in form.custom_id.errors %}
+                <p><span style="color: red">{{ error }}</span></p>
+              {% endfor %}
+
+              {{ form.submit(class="btn btn-primary") }}
+            </form>
           </div>
+          <div class="col-sm"></div>
         </div>
       </div>
-    {% endif %}
-  {% endwith %}
 
-  {% block content %}{% endblock content %}
-  {% include "footer.html" %}
-</body>
-</html>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm"></div>
+          <div class="col-sm">
+            {% if link %}
+              <h5 class="text-center">Ваша новая ссылка готова:</h5>
+              <p class="text-center">
+                <a href="{{ link }}" class="text-center" target="_blank">{{ link }}</a>
+              </p>
+            {% endif %}
+          </div>
+          <div class="col-sm"></div>
+        </div>
+      </div>
+    </section>
+  </main>
+{% endblock content %}
